finish wiring up the last core functionality + remove unused files

--- a/public/css_demo.html
+++ b/public/css_demo.html
@@ -48,8 +48,10 @@
 
   		<div class="stretcher"></div>
 
-  		<div class="error_msg">Unlike Facebook, this error msg supports FBML<p>success msg body</p></div>
-  		<div class="success_msg">Unlike Facebook, this error msg supports FBML</div>
+  		<div class="error_msg">Error msg title
+  		  <p>msg body for more explanation</p>
+  		</div>
+  		<div class="success_msg">Success msg title</div>
 
   		<div class="full_column">
   			<div class="module_on_grey">
